# rust-newstr

./: Cargo.toml  README.md
src/: lib.rs
tests/: other_traits.rs  required.rs
