[package]
name = "newstr"
description = "Simple macros for declaring String-base new types."
version = "0.1.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/newstr/"
repository = "https://github.com/johnstonskj/rust-newstr.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[dev-dependencies]
lazy_static = "1.4.0"
regex = "1.4.5"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test" ]
